# etl-pipeline-portfolio

./: .gitignore  pyproject.toml  todo.md
config/: pipeline.toml
data/: weather.duckdb  weather.duckdb.wal
notebooks/: pipeline_testing.ipynb  project_exploration.ipynb
src/: config.py  create_db.py  extract.py  load.py  pipeline.py  transform.py
src/utils/: logging.py  paths.py
